--- a/languages/camptix-mp-es_ES.po
+++ b/languages/camptix-mp-es_ES.po
@@ -2,93 +2,112 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CampTix PagSeguro v1.5.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2013-06-10 01:10:49+0000\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2015-03-26 11:30-0300\n"
+"PO-Revision-Date: 2015-03-26 11:30-0300\n"
+"Last-Translator: Juanfra Aldasoro <juan@nicethemes.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Poedit 1.5.4\n"
-"X-Poedit-Language: \n"
-"X-Poedit-Country: \n"
+"X-Generator: Poedit 1.5.7\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;\n"
+"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
+"_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
 "X-Poedit-Basepath: ../\n"
-"X-Poedit-Bookmarks: \n"
+"X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Textdomain-Support: yes"
 
-#: camptix-pagseguro.php:21
+# @ ctpagseguro
+#: camptix-mercadopago.php:94
 #, php-format
-#@ ctpagseguro
-msgid "CampTix PagSeguro Gateway depends on the last version of %s to work!"
-msgstr "O Método de Pagamento PagSeguro para CampTix depende da última versão do %s para funcionar!"
+msgid "CampTix MercadoPago Gateway depends on the last version of %s to work!"
+msgstr "Camptix MercadoPago depende de la última versión de %s para funcionar."
 
-#: payment-pagseguro.php:54
-#@ ctpagseguro
-msgid "Email"
-msgstr "E-mail"
+# @ ctpagseguro
+#: camptix-mercadopago.php:113
+msgid "Settings"
+msgstr "Configuración"
 
-#: payment-pagseguro.php:205
-#@ ctpagseguro
+# @ ctpagseguro
+#: payment-mercadopago.php:51
+msgid ""
+"MercadoPago Gateway works by sending the user to MercadoPago.com to enter "
+"their payment information and complete the payment."
+msgstr ""
+"MercadpPago para Camptix funciona enviando el usuario a realizar el pago a "
+"MercadoPago.com"
+
+#: payment-mercadopago.php:65
+msgid "Client ID"
+msgstr "Client ID"
+
+#: payment-mercadopago.php:66
+msgid "Client Secret"
+msgstr "Client Secret"
+
+#: payment-mercadopago.php:67
+msgid "Sandbox Mode"
+msgstr "Modo Sandbox"
+
+#: payment-mercadopago.php:68
+msgid "MercadoPago sandbox can be used to test payments."
+msgstr "El modo sandbox puede ser utilizado para realizar pruebas."
+
+#: payment-mercadopago.php:70
+msgid "Debug Log"
+msgstr "Registrar en log"
+
+#: payment-mercadopago.php:71
+msgid "Log MercadoPago events, such as API requests."
+msgstr "Registrar eventos de MercadoPago, como llamados a la API."
+
+#: payment-mercadopago.php:111
+msgid "Argentine peso"
+msgstr "Peso argentino"
+
+#: payment-mercadopago.php:112
+msgid "Brazilian real"
+msgstr "Real brasilero"
+
+#: payment-mercadopago.php:113
+msgid "Colombian peso"
+msgstr "Peso colombiano"
+
+#: payment-mercadopago.php:114
+msgid "Mexican peso"
+msgstr "Peso mexicano"
+
+#: payment-mercadopago.php:115
+msgid "Venezuelan bolívar"
+msgstr "Bolívar venezolano"
+
+#: payment-mercadopago.php:142
+msgid "Getting MercadoPago client credentials..."
+msgstr "Obteniendo las credenciales del cliente en MercadoPago..."
+
+#: payment-mercadopago.php:171
+msgid "Received valid response from MercadoPago"
+msgstr "Se recibió una respuesta válida de MercadoPago"
+
+# @ ctpagseguro
+#: payment-mercadopago.php:201
 msgid "Event"
 msgstr "Evento"
 
-#: payment-pagseguro.php:44
-#@ ctpagseguro
-msgid "PagSeguro Gateway works by sending the user to PagSeguro to enter their payment information."
-msgstr "O Método de Pagamento PagSeguro funciona enviando o usuário à página do PagSeguro para preencher suas informações de pagamento."
-
-#: payment-pagseguro.php:198
-#@ ctpagseguro
+# @ ctpagseguro
+#: payment-mercadopago.php:354
 msgid "The selected currency is not supported by this payment method."
-msgstr "A moeda selecionada não é suportada por esse método de pagamento."
+msgstr "La moneda seleccionada no es soportada por este método de pago."
 
-#: payment-pagseguro.php:55
-#@ ctpagseguro
-msgid "Token"
-msgstr "Token"
+#: payment-mercadopago.php:482
+msgid "Checking IPN request..."
+msgstr "Chequeando respuesta desde MercadoPago..."
 
-#. translators: plugin header field 'Name'
-#: camptix-pagseguro.php:0
-#@ ctpagseguro
-msgid "CampTix PagSeguro"
-msgstr "CampTix PagSeguro"
+#: payment-mercadopago.php:517
+msgid "Received valid IPN response from MercadoPago"
+msgstr "Se recibió una respuesta válida desde MercadoPago"
 
-#. translators: plugin header field 'PluginURI'
-#: camptix-pagseguro.php:0
-#@ ctpagseguro
-msgid "https://github.com/claudiosmweb/camptix-pagseguro"
-msgstr "https://github.com/claudiosmweb/camptix-pagseguro"
-
-#. translators: plugin header field 'Description'
-#: camptix-pagseguro.php:0
-#@ ctpagseguro
-msgid "PagSeguro Gateway for CampTix"
-msgstr "PagSeguro Gateway para CampTix"
-
-#. translators: plugin header field 'Author'
-#: camptix-pagseguro.php:0
-#@ ctpagseguro
-msgid "claudiosanches, rafaelfunchal"
-msgstr "claudiosanches, rafaelfunchal"
-
-#. translators: plugin header field 'AuthorURI'
-#: camptix-pagseguro.php:0
-#@ ctpagseguro
-msgid "http://claudiosmweb.com/"
-msgstr "http://claudiosmweb.com/"
-
-#: camptix-pagseguro.php:67
-#@ ctpagseguro
-msgid "Settings"
-msgstr "Configurações"
-
-#. translators: plugin header field 'Version'
-#: camptix-pagseguro.php:0
-#@ ctpagseguro
-msgid "1.5.3"
-msgstr "1.5.3"
-
+#: payment-mercadopago.php:523
+msgid "Received invalid IPN response from MercadoPago."
+msgstr "Se recibió una respuesta errónea desde MercadoPago"
